# WS500-OpenFW

./: .gitignore  CMakeLists.txt  LICENSE  README.md  STM32F072xB_FLASH.ld
.github/workflows/: build.yml
Core/Inc/: board.h  can_n2k.h  config_protocol.h  field_drive.h  ina2xx.h  regulator.h  sensors.h
Core/Src/: board.c  can_n2k.c  config_protocol.c  field_drive.c  ina2xx.c  main.c  regulator.c  sensors.c
Drivers/: README.md
cmake/: gcc-arm-none-eabi.cmake
control/Inc/: arbitration.h  control.h  faults.h  field.h  limits.h  telemetry.h  thermal.h
control/Src/: arbitration.c  control.c  faults.c  field.c  limits.c  telemetry.c  thermal.c
control/test/: test.h  test_arbitration.c  test_faults.c  test_field.c  test_limits.c  test_main.c  test_statemachine.c  test_telemetry.c  test_thermal.c
docs/: CAN_INTEGRATION.md  CLIENT_CONNECTIVITY.md  CONTROL_SPEC_NEXTGEN.md  IO_COVERAGE.md  OPEN_SOURCE.md  PROFILE_SPEC_LFP.md  PROJECT_PLAN.md  QUICK_START.md  USER_MANUAL.md  WS500_HARDWARE_SPEC.md
scripts/: fetch_deps.sh
